--- a/myproject/blog/templates/blog/base.html
+++ b/myproject/blog/templates/blog/base.html
@@ -5,8 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin&family=Montserrat:wght@600&display=swap" rel="stylesheet">
     <title>{% block title %}{% endblock title %}</title>
     <link rel="stylesheet" href= {% static "css/blog.css" %}>
+    {% block head %}{% endblock head %}
 </head>
 <body>
     <div id=content>
@@ -14,7 +18,7 @@
 
     </div>
     <div id="sidebar">
-        <h2>My Blog</h2>
+        <a href= {% url 'blog:post_list' %} ><h2>My Blog</h2></a>
         <p>This is my Blog</p>
     </div>
 </body>
